<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.bossini.listaclientesarqdsis_cco.MainActivity">


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/busca_agencia_cliente"
        android:layout_weight="1.22"
        android:hint="@string/busca_agencia"
        android:scrollbarSize="20dp" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/busca_conta_cliente"
        android:layout_weight="1"
        android:hint="@string/busca_conta"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/busca_nome_cliente"
        android:layout_weight="1"
        android:hint="@string/busca_cliente"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_busca"
        android:id="@+id/button"
        android:onClick="buscarClientes"/>
</LinearLayout>
